--- a/roles/swarm_init/tasks/main.yml
+++ b/roles/swarm_init/tasks/main.yml
@@ -4,20 +4,8 @@
     advertise_addr: "{{ advertise_address }}"
   register: token
 
-- name: Folder for tokens exists
-  file:
-    path: ./tokens
-    state: directory
-  delegate_to: localhost
-
-- name: Save token for manager
-  copy:
-    dest: ./tokens/token-manager
-    content: "{{ token.swarm_facts.JoinTokens.Manager }}"
-  delegate_to: localhost
-
-- name: Save token for worker
-  copy:
-    dest: ./tokens/token-worker
-    content: "{{ token.swarm_facts.JoinTokens.Worker }}"
-  delegate_to: localhost
+- name: Save tokens
+  set_fact:
+    token_manager: "{{ token.swarm_facts.JoinTokens.Manager }}"
+    token_worker: "{{ token.swarm_facts.JoinTokens.Worker }}"
+    cacheable: yes
