--- a/group_vars/all/vars.yml
+++ b/group_vars/all/vars.yml
@@ -11,6 +11,8 @@ rmqDefaults:
 registry_name: localhost:5000/
 
 services:
+  - name: registry
+    version: latest
   - name: api
     version: latest
   - name: app
