--- a/course.yml
+++ b/course.yml
@@ -6,6 +6,8 @@
       tags: preconfig
     - role: build
       tags: build
+    - role: deploy_registry
+      tags: deploy_registry
     - role: deploy
       tags: deploy
     - role: swarm_init
